--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar color="primary">
+  <span>gestion des assignments</span>
+</mat-toolbar>
 <h1>
   <nav>
     <a routerLink="/home">{{title}}</a>
@@ -10,4 +13,3 @@
 <!--
 <app-assignments></app-assignments>
 -->
-
