--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar color="primary">
+  <span>gestion des assignments</span>
+</mat-toolbar>
 @if(assignmentTransmis) {
 <h2>Détail de l'assignment:</h2>
 
@@ -6,22 +9,18 @@
     <mat-card-title>{{ assignmentTransmis.nom }}</mat-card-title>
     <mat-card-subtitle>{{
       assignmentTransmis.dateDeRendu | date
-    }}</mat-card-subtitle>
+      }}</mat-card-subtitle>
   </mat-card-content>
   <mat-card-actions class="container">
     @if(!assignmentTransmis.rendu) {
     <mat-checkbox (click)="onAssignmentRendu()">Rendu</mat-checkbox>
     }
-    <button mat-raised-button color="warn" (click)="onDelete()"
-            [disabled]="!isAdmin()"
-    >
+    <button mat-raised-button color="warn" (click)="onDelete()" [disabled]="!isAdmin()">
       DELETE
     </button>
     <nav>
       <a routerLink="edit">
-        <button mat-raised-button color="primary"
-                [disabled]="!isAdmin()"
-        >
+        <button mat-raised-button color="primary" [disabled]="!isAdmin()">
           EDIT
         </button>
       </a>
