--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -26,7 +26,7 @@ mat-card-actions {
   width: 100%;
 }
 
-.btn-block{
+.btn-block {
   width: 100%;
 }
 
@@ -37,3 +37,22 @@ mat-card-title {
   margin-left: 159px;
 }
 
+.success-message {
+  color: rgb(34, 37, 34);
+  background-color: rgb(93, 226, 93);
+  border-color: rgb(93, 226, 93);
+  padding: 0.75rem 1.25rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  text-align: center;
+}
+
+.error-message {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+  padding: 0.75rem 1.25rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+  text-align: center;
+}
