--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,26 +1,26 @@
-<!-- login.component.html -->
 <div class="container" fxLayout="row" fxLayoutAlign="center center">
   <mat-card class="box">
     <mat-card-header>
       <mat-card-title>Login</mat-card-title>
     </mat-card-header>
-    <form class="example-form">
+    <form class="example-form" (ngSubmit)="login()">
       <mat-card-content>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Username">
+          <input matInput placeholder="Email" [(ngModel)]="email" name="email">
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <input matInput type="password" placeholder="Password">
+          <input matInput type="password" placeholder="Password" [(ngModel)]="password" name="password">
         </mat-form-field>
       </mat-card-content>
-      
-      
+
       <mat-card-actions>
-        <button mat-flat-button color="primary" class="btn-block">se connecter</button>
+        <button mat-flat-button color="primary" class="btn-block" type="submit">Se connecter</button>
       </mat-card-actions>
     </form>
+
+    <div *ngIf="loginSuccessMessage" class="success-message"><mat-icon color="success-message">check_circle</mat-icon>
+      {{ loginSuccessMessage }}</div>
+    <div *ngIf="loginErrorMessage" class="error-message"><mat-icon color="danger">error</mat-icon> {{ loginErrorMessage
+      }}</div>
   </mat-card>
 </div>
-
-
-
