--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <span>{{title}}</span > 
       <span class="example-spacer"></span>
       <button mat-flat-button color="accent" routerLink="/login">Login</button>
-      
+      <button class="boutondeconnexion" mat-flat-button color="accent" (click)="deconnexion()">Déconnexion</button>
     </mat-toolbar-row>
 </mat-toolbar>
 
