--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  
 
   <h2>{{ titre }}</h2>
   <p>
@@ -12,142 +11,49 @@
     </mat-slider>
   </p>
 
-  <!-- <h2>Version avec scrolling infini</h2>
-  <cdk-virtual-scroll-viewport itemSize="50" class="example-viewport" #scroller>
-    <mat-list *cdkVirtualFor="let a of assignments" class="example-item">
-      <a routerLink="/assignments/{{ a._id }}">
-        <h3 mat-subheader>
-          Date limite: {{ a.dateDeRendu | date : "dd/MM/yy" }}
-        </h3>
-        <mat-list-item>
-          <p>{{ a.nom }} id = {{ a._id }}, rendu : {{ a.rendu }}</p>
-        </mat-list-item>
-        <mat-divider></mat-divider>
-      </a>
-    </mat-list>
-  </cdk-virtual-scroll-viewport> -->
-
-  <!-- <h1>Avec data table</h1> -->
-  @for(a of assignments; track a.nom) {
-  <mat-card class="example-card">
-    <mat-card-header>
-      <div mat-card-avatar class="example-header-image-round">
-        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Nom de l'image">
-      </div>
-      <mat-card-title>Shiba Inu</mat-card-title>
-      <mat-card-subtitle>Dog Breed</mat-card-subtitle>
-      <div class="example-header-image-round-right">
-        <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Nom de l'image">
-      </div>
-    </mat-card-header>
-    <img mat-card-image class="imageMatiere" src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-    <mat-card-content>
-      <p> 
-      </p>
-      @if(a.rendu) {
-        <mat-card-title>{{ a.nom }}</mat-card-title>
-        <mat-card-subtitle>{{ a.dateDeRendu|date }}</mat-card-subtitle>
-        {{ a.rendu }}
-      } @else {
-        {{ a.nom }} NON RENDU !!!!
-        
-      }
-      
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-flat-button color="primary" routerLink="/assignment/{{ a._id }}">Voir détails</button>
-    </mat-card-actions>
-  </mat-card>
-}
-
-  <div>
-    <button mat-raised-button color="primary" [disabled]="!hasPrevPage" [disabled]="!hasPrevPage"
-      (click)="premierePage()">
-      Première
-    </button>
-    &nbsp;&nbsp;&nbsp;
-    <button mat-raised-button color="primary" [disabled]="!hasPrevPage" (click)="pagePrecedente()">
-      Précédent
-    </button>
-    &nbsp;&nbsp;&nbsp;
-    <button mat-raised-button color="primary" [disabled]="!hasNextPage" (click)="pageSuivante()">
-      Suivante
-    </button>
-    &nbsp;&nbsp;&nbsp;
-    <button mat-raised-button color="primary" [disabled]="!hasNextPage" (click)="dernierePage()">
-      Dernière
-    </button>
-  </div>
-
-  <!-- <mat-paginator #paginator class="demo-paginator" (page)="handlePageEvent($event)" [length]="totalPages"
-    [pageSize]="limit" [showFirstLastButtons]="true" [pageSizeOptions]="[5, 10, 25]" [pageIndex]="page"
-    aria-label="Select page">
-  </mat-paginator> -->
-
-  <!-- <table mat-table [dataSource]="assignments" class="mat-elevation-z8 demo-table">
-    
-    <ng-container matColumnDef="nom">
-      <th mat-header-cell *matHeaderCellDef>Nom</th>
-      <td mat-cell *matCellDef="let a">{{ a.nom }}</td>
-    </ng-container>
-
-    
-    <ng-container matColumnDef="dateDeRendu">
-      <th mat-header-cell *matHeaderCellDef>Date de rendu</th>
-      <td mat-cell *matCellDef="let a">{{ a.dateDeRendu | date }}</td>
-    </ng-container>
-
-    
-    <ng-container matColumnDef="rendu">
-      <th mat-header-cell *matHeaderCellDef>Rendu</th>
-      <td mat-cell *matCellDef="let a">{{ a.rendu }}</td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table> -->
-
-
-  <!-- <h1>Version avec ul / li et for</h1>
-  <mat-divider></mat-divider>
-  <mat-list>
-    @for(a of assignments; track a.nom) {
-    <mat-list-item>
-      <nav>
-        <a routerLink="/assignment/{{ a._id }}">
-          <div>
-            <h3 matListItemTitle [ngStyle]="{ color: a.rendu ? 'green' : 'red' }">
-              {{ a.nom }}
-            </h3>
-            <p matListItemLine>{{ a.dateDeRendu | date }}</p>
+  <div class="cards-container">
+    <!-- Utilisez ngFor pour itérer sur les assignments -->
+    <div *ngFor="let a of assignments">
+      <mat-card class="example-card">
+        <mat-card-header>
+          <div mat-card-avatar class="example-header-image-round">
+            <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Nom de l'image">
           </div>
-        </a>
-      </nav>
-    </mat-list-item>
-    <mat-divider></mat-divider>
-    }
-  </mat-list> -->
-</div>
-
-<!--
-<p>Avec Angular supérieur à la version 17</p>
-<table>
-  <tbody>
-    @for (a of assignments; track a.nom) {
-      <div [ngStyle]="{'color':getColor(a)}">
-      @if(a.rendu) {
-        <tr>
-          <td>{{ a.nom }}</td>
-          <td>{{ a.dateDeRendu|date }}</td>
-          <td>{{ a.rendu }}</td>
-        </tr>
-      } @else {
-        <tr>
-          <td>{{ a.nom }} NON RENDU !!!!</td>
-        </tr>
-      }
+          <mat-card-title>{{ a.nom }}</mat-card-title>
+          <mat-card-subtitle>{{ a.dateDeRendu | date }}</mat-card-subtitle>
+          <div class="example-header-image-round-right">
+            <img src="https://material.angular.io/assets/img/examples/shiba1.jpg" alt="Nom de l'image">
+          </div>
+        </mat-card-header>
+        <img mat-card-image class="imageMatiere" src="https://material.angular.io/assets/img/examples/shiba2.jpg"
+          alt="Photo of a Shiba Inu">
+        <mat-card-content>
+          <p>
+            <!-- Le contenu de la carte -->
+            {{ a.rendu ? a.rendu : a.nom + ' NON RENDU !!!!' }}
+          </p>
+        </mat-card-content>
+        <mat-card-actions>
+          <button mat-flat-button color="primary" routerLink="/assignment/{{ a._id }}">Voir détails</button>
+        </mat-card-actions>
+      </mat-card>
     </div>
-    }
-  </tbody>
-</table>
--->
+    <div>
+      <button mat-raised-button color="primary" [disabled]="!hasPrevPage" (click)="premierePage()">
+        Première
+      </button>
+      &nbsp;&nbsp;&nbsp;
+      <button mat-raised-button color="primary" [disabled]="!hasPrevPage" (click)="pagePrecedente()">
+        Précédent
+      </button>
+      &nbsp;&nbsp;&nbsp;
+      <button mat-raised-button color="primary" [disabled]="!hasNextPage" (click)="pageSuivante()">
+        Suivante
+      </button>
+      &nbsp;&nbsp;&nbsp;
+      <button mat-raised-button color="primary" [disabled]="!hasNextPage" (click)="dernierePage()">
+        Dernière
+      </button>
+    </div>
+  </div>
+</div>
