--- a/src/app/matiere/matiere.component.css
+++ b/src/app/matiere/matiere.component.css
@@ -38,6 +38,7 @@ mat-card-title {
     font-weight: bold;
     text-align: center;
     margin-left: 74px;
+    margin-top: 15px;
 }
 
 .success-message {
@@ -59,3 +60,29 @@ mat-card-title {
     border-radius: 0.25rem;
     text-align: center;
 }
+
+.full-width-table {
+    width: 100%;
+}
+
+.box card-container {
+    width: 100%;
+}
+
+.box {
+    margin: 10px;
+}
+
+.example-full-width {
+    width: 100%;
+}
+
+.mat-mdc-card-content:last-child {
+    padding-bottom: 118px;
+}
+.no-matieres-message {
+    text-align: center;
+    margin: 20px 0;
+    font-size: 16px;
+    color: gray;
+  }
