--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -28,7 +28,7 @@
     </mat-card>
 
     <!-- Table Section -->
-    <mat-card class="box card-container">
+    <mat-card class="box card-container" fxFlex="55%">
         <mat-card-header fxLayoutAlign="center center">
             <mat-card-title>Liste des matières</mat-card-title>
         </mat-card-header>
@@ -39,10 +39,9 @@
                 <table mat-table [dataSource]="matieres" class="mat-elevation-z8 full-width-table">
 
                     <ng-container matColumnDef="nom">
-                        <th mat-header-cell *matHeaderCellDef> Nom matière</th>
+                        <th mat-header-cell *matHeaderCellDef> Nom </th>
                         <td mat-cell *matCellDef="let matiere"> {{ matiere.nom }} </td>
                     </ng-container>
-
 
                     <ng-container matColumnDef="image">
                         <th mat-header-cell *matHeaderCellDef> Image </th>
@@ -51,17 +50,24 @@
                         </td>
                     </ng-container>
 
-
                     <ng-container matColumnDef="nomProf">
                         <th mat-header-cell *matHeaderCellDef> Nom Professeur </th>
                         <td mat-cell *matCellDef="let matiere"> {{ matiere.nomProf }} </td>
                     </ng-container>
 
-
                     <ng-container matColumnDef="imageProf">
                         <th mat-header-cell *matHeaderCellDef> Image Professeur </th>
                         <td mat-cell *matCellDef="let matiere">
                             <img [src]="matiere.imageProf" alt="{{ matiere.nomProf }}" width="50">
+                        </td>
+                    </ng-container>
+
+                    <ng-container matColumnDef="actions">
+                        <th mat-header-cell *matHeaderCellDef> Actions </th>
+                        <td mat-cell *matCellDef="let matiere">
+                            <button mat-icon-button (click)="deleteMatiere(matiere._id) " class="delete-button">
+                                <mat-icon>delete</mat-icon>
+                            </button>
                         </td>
                     </ng-container>
 
