--- a/src/app/matiere/matiere.component.html
+++ b/src/app/matiere/matiere.component.html
@@ -63,7 +63,7 @@
                     </ng-container>
 
                     <ng-container matColumnDef="actions">
-                        <th mat-header-cell *matHeaderCellDef> Actions </th>
+                        <th mat-header-cell *matHeaderCellDef> Action </th>
                         <td mat-cell *matCellDef="let matiere">
                             <button mat-icon-button (click)="deleteMatiere(matiere._id) " class="delete-button">
                                 <mat-icon>delete</mat-icon>
