--- a/src/app/auteur/auteur.component.css
+++ b/src/app/auteur/auteur.component.css
@@ -26,7 +26,7 @@
 }
 
 .box {
-    max-width: 400px;
+    max-width:50%;;
     width: 100%;
     max-height: 80vh;
 }
@@ -79,3 +79,6 @@ mat-card-title {
     border-radius: 0.25rem;
     text-align: center;
 }
+.delete-button {
+    color: red;
+  }
