--- a/src/app/assignments/add-assignment/add-assignment.component.html
+++ b/src/app/assignments/add-assignment/add-assignment.component.html
@@ -1,18 +1,44 @@
-<h1>Ajout d'un assignment</h1>
-<form ngForm #assignmentForm (submit)="onSubmit($event); assignmentForm.reset()" class="form">
-  <mat-form-field>
-    <input matInput placeholder="Nom" required [(ngModel)]="nomAssignment" name="nom" />
-  </mat-form-field>
+<div class="container" fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
+  <!-- Card Section -->
+  <mat-card class="box" fxFlex="45%">
+    <mat-card-header fxLayoutAlign="center center">
+      <mat-card-title>Ajout d'un assignment</mat-card-title>
+    </mat-card-header>
+    <form #assignmentForm="ngForm" (submit)="onSubmit($event); assignmentForm.reset()" class="form">
+      <mat-card-content>
+        <mat-form-field class="example-full-width">
+          <mat-label>Nom de l'auteur</mat-label>
+          <mat-select [(ngModel)]="auteurs" name="auteur" required>
+            <mat-option *ngFor="let auteur of auteurs" [value]="auteur._id">{{ auteur.nom }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <mat-label>Nom de la matière</mat-label>
+          <mat-select [(ngModel)]="matieres" name="matiere" required>
+            <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">{{ matiere.nom }}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Nom" required [(ngModel)]="nomAssignment" name="nom" />
+        </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Date de rendu</mat-label>
-    <input matInput [matDatepicker]="picker" [(ngModel)]="dateDeRendu" name="date" />
-    <mat-hint>dd/MM/YYYY</mat-hint>
-    <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker #picker></mat-datepicker>
-  </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <mat-label>Date de rendu</mat-label>
+          <input matInput [matDatepicker]="picker" [(ngModel)]="dateDeRendu" name="date" />
+          <mat-hint>dd/MM/YYYY</mat-hint>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+      </mat-card-content>
+      <br>
+      <mat-card-actions>
+        <button mat-flat-button color="primary" type="submit" class="button"
+          [disabled]="nomAssignment == '' || dateDeRendu === undefined">
+          Ajouter un devoir
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
 
-  <button mat-stroked-button color="primary" [disabled]="nomAssignment == '' || dateDeRendu === undefined">
-    Ajouter un devoir
-  </button>
-</form>
+  <!-- Other Content -->
+</div>
