modification image dans card

--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -112,3 +112,14 @@ td {
   /* 4 cartes par ligne */
   box-sizing: border-box;
 }
+.imageMatiere{
+  width: 100%; /* Définissez la largeur désirée */
+  height: 300px;
+  object-fit: cover;
+}
+.pagination{
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  margin-top: 10px;
+}
