--- a/src/app/assignments/assignments.component.html
+++ b/src/app/assignments/assignments.component.html
@@ -37,7 +37,8 @@
         </mat-card-actions>
       </mat-card>
     </div>
-    <div>
+  </div>
+    <div class="pagination">
       <button mat-raised-button color="primary" [disabled]="!hasPrevPage" (click)="premierePage()">
         Première
       </button>
@@ -54,5 +55,5 @@
         Dernière
       </button>
     </div>
-  </div>
+  
 </div>
