--- a/src/app/assignments/edit-assignment/edit-assignment.component.html
+++ b/src/app/assignments/edit-assignment/edit-assignment.component.html
@@ -1,20 +1,39 @@
-@if(assignment) {
-<div class="container">
-  <h1>Edition de l'assignment {{assignment.nom}}</h1>
-  <form ngForm class="form" #formupdate (submit)="onSaveAssignment(); formupdate.reset(); ">
-    <mat-form-field>
-      <input matInput placeholder="Edition du nom" [(ngModel)]="nomAssignment" name="assignment-name">
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput [matDatepicker]="picker" placeholder="Edition de la date" [(ngModel)]="dateDeRendu" name="date">
-      <mat-datepicker-toggle matSuffix [for]="picker">
-      </mat-datepicker-toggle>
-      <mat-datepicker #picker></mat-datepicker>
-    </mat-form-field>
-    <button mat-raised-button color="primary" [disabled]="((!nomAssignment)||(!dateDeRendu))">
-      Sauver
-    </button>
-  </form>
- </div>
-}
-
+<div *ngIf="assignment" class="container" fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Edition de l'assignment {{assignment.nom}}</mat-card-title>
+    </mat-card-header>
+    <form (ngSubmit)="onSaveAssignment();" #formupdate="ngForm" class="form">
+      <mat-card-content>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Edition du nom" [(ngModel)]="nomAssignment" name="assignment-name" required>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput [matDatepicker]="picker" placeholder="Edition de la date" [(ngModel)]="dateDeRendu"
+            name="date" required>
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Nom de l'auteur" [(ngModel)]="assignment.auteurs.nom" name="auteur-name"
+            disabled>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Nom du professeur" [(ngModel)]="assignment.matieres.nomProf" name="prof-name"
+            disabled>
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <input matInput placeholder="Note" [(ngModel)]="assignment.note" name="note" type="number" min="0" max="20">
+        </mat-form-field>
+        <mat-form-field class="example-full-width">
+          <textarea matInput placeholder="Remarques" [(ngModel)]="assignment.remarques" name="remarques"></textarea>
+        </mat-form-field>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-flat-button color="primary" class="btn-block" type="submit" [disabled]="!formupdate.form.valid">
+          Sauver
+        </button>
+      </mat-card-actions>
+    </form>
+  </mat-card>
+</div>
