details de l'assignment

--- a/src/app/assignments/assignment-detail/assignment-detail.component.css
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.css
@@ -1,4 +1,14 @@
 .container {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+}
+mat-card-content p {
+  margin: 10px 0;
+  font-size: 16px;
+}
+.text{
+  color:red;
+}
+.buttonedit{
+  margin-left: 20px;
 }
