--- a/src/app/assignments/assignment-detail/assignment-detail.component.html
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.html
@@ -8,16 +8,31 @@
       assignmentTransmis.dateDeRendu | date
       }}</mat-card-subtitle>
   </mat-card-content>
+  <mat-card-content>
+    <p><strong>Matière :</strong> {{ assignmentTransmis.matieres.nom }}</p>
+    <p><strong>Professeur :</strong> {{ assignmentTransmis.matieres.nomProf }}</p>
+    <p><strong>Elève :</strong> {{ assignmentTransmis.auteurs.nom }}</p>
+    <div *ngIf="assignmentTransmis.note === null && assignmentTransmis.remarques === null">
+      <p><strong class="text">Devoir non rendu donc il n'y a pas encore de note!!!</strong></p>
+    </div>
+
+    <!-- Display note and remarks if they are available -->
+    <div *ngIf="assignmentTransmis.note !== null || assignmentTransmis.remarques !== null">
+      <p><strong>Devoir {{ assignmentTransmis.rendu }}</strong></p>
+      <p><strong>Note :</strong> {{ assignmentTransmis.note }}</p>
+      <p><strong>Remarques :</strong> {{ assignmentTransmis.remarques }}</p>
+    </div>
+  </mat-card-content>
   <mat-card-actions class="container">
-    @if(!assignmentTransmis.rendu) {
+    <!-- @if(!assignmentTransmis.rendu) {
     <mat-checkbox (click)="onAssignmentRendu()">Rendu</mat-checkbox>
-    }
+    } -->
     <button mat-raised-button color="warn" (click)="onDelete()" [disabled]="!isAuthenticated()">
       DELETE
     </button>
     <nav>
       <a routerLink="edit">
-        <button mat-raised-button color="primary" [disabled]="!isAuthenticated()">
+        <button mat-raised-button color="primary" [disabled]="!isAuthenticated()" class="buttonedit">
           EDIT
         </button>
       </a>
