--- a/src/app/assignments/edit-assignment/edit-assignment.component.html
+++ b/src/app/assignments/edit-assignment/edit-assignment.component.html
@@ -3,7 +3,7 @@
     <mat-card-header>
       <mat-card-title>Edition de l'assignment {{assignment.nom}}</mat-card-title>
     </mat-card-header>
-    <form (ngSubmit)="onSaveAssignment();" #formupdate="ngForm" class="form">
+    <form (ngSubmit)="onSaveAssignment()" #formupdate="ngForm" class="form">
       <mat-card-content>
         <mat-form-field class="example-full-width">
           <input matInput placeholder="Edition du nom" [(ngModel)]="nomAssignment" name="assignment-name" required>
@@ -23,10 +23,10 @@
             disabled>
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <input matInput placeholder="Note" [(ngModel)]="assignment.note" name="note" type="number" min="0" max="20">
+          <input matInput placeholder="Note" [(ngModel)]="note" name="note" type="number" min="0" max="20">
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <textarea matInput placeholder="Remarques" [(ngModel)]="assignment.remarques" name="remarques"></textarea>
+          <textarea matInput placeholder="Remarques" [(ngModel)]="remarques" name="remarques"></textarea>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
