--- a/src/app/assignments/assignment-detail/assignment-detail.component.css
+++ b/src/app/assignments/assignment-detail/assignment-detail.component.css
@@ -2,13 +2,20 @@
   display: flex;
   /* justify-content: space-between; */
 }
+
 mat-card-content p {
   margin: 10px 0;
   font-size: 16px;
 }
-.text{
-  color:red;
+
+.text {
+  color: red;
 }
-.buttonedit{
+
+.buttonedit {
   margin-left: 20px;
+}
+
+.textRendu {
+  color: yellowgreen
 }
