--- a/src/app/assignments/assignments.component.css
+++ b/src/app/assignments/assignments.component.css
@@ -18,8 +18,8 @@ td {
 }
 
 .container {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .btnAjout {
@@ -122,4 +122,11 @@ td {
   justify-content: center; 
   align-items: center; 
   margin-top: 10px;
+}
+.left, .right {
+  width: 50%;
+  height: 100%;
+  float: left;
+  box-sizing: border-box;
+  padding: 20px;
 }
