--- a/src/app/assignment-dialog/assignment-dialog.component.html
+++ b/src/app/assignment-dialog/assignment-dialog.component.html
@@ -1,11 +1,11 @@
 <h1 mat-dialog-title>Ajouter des remarques et une note</h1>
 <div mat-dialog-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="input">
             <mat-label>Note</mat-label>
             <input matInput type="number" formControlName="note">
         </mat-form-field>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" class="input">
             <mat-label>Remarques</mat-label>
             <textarea matInput formControlName="remarque"></textarea>
         </mat-form-field>
