Update Drag and Dro assignment

--- a/src/app/assignment-dialog/assignment-dialog.component.html
+++ b/src/app/assignment-dialog/assignment-dialog.component.html
@@ -7,7 +7,7 @@
         </mat-form-field>
         <mat-form-field appearance="fill" class="input">
             <mat-label>Remarques</mat-label>
-            <textarea matInput formControlName="remarque"></textarea>
+            <textarea matInput formControlName="remarques"></textarea>
         </mat-form-field>
     </form>
 </div>
