Formulaire stepper create assignment
 Formulaire de type Stepper (formulaire en plusieurs étapes) pour l'ajout d'Assignments

--- a/src/app/assignments/add-assignment/add-assignment.component.css
+++ b/src/app/assignments/add-assignment/add-assignment.component.css
@@ -9,6 +9,9 @@
   max-width: 50%;
   width: 100%;
   max-height: 80vh;
+  overflow: auto;
+  /* Pour gérer le débordement si le contenu dépasse la hauteur */
+  margin: 10px;
 }
 
 .example-form {
@@ -17,6 +20,9 @@
 
 .mat-card-title {
   text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 15px 0;
 }
 
 .example-full-width {
@@ -35,14 +41,6 @@ mat-card-actions {
 
 .delete-button {
   color: red;
-}
-
-mat-card-title {
-  font-size: 24px;
-  font-weight: bold;
-  text-align: center;
-  margin-left: 330px;
-  margin-top: 15px;
 }
 
 .success-message {
@@ -73,14 +71,6 @@ mat-card-title {
   width: 100%;
 }
 
-.box {
-  margin: 10px;
-}
-
-.example-full-width {
-  width: 100%;
-}
-
 .mat-mdc-card-content:last-child {
   padding-bottom: 118px;
 }
@@ -91,6 +81,20 @@ mat-card-title {
   font-size: 16px;
   color: gray;
 }
-.button{
+
+.button {
   margin-left: 45%;
+}
+
+/* Stepper specific styles */
+.mat-horizontal-stepper-header-container {
+  justify-content: center;
+}
+
+.mat-stepper-horizontal {
+  margin-top: 20px;
+}
+
+.mat-form-field {
+  width: 100%;
 }
