--- a/src/app/assignments/add-assignment/add-assignment.component.html
+++ b/src/app/assignments/add-assignment/add-assignment.component.html
@@ -1,42 +1,74 @@
-<div class="container" fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="20px">
-  <mat-card class="box" fxFlex="45%">
-    <mat-card-header fxLayoutAlign="center center">
+<div class="container">
+  <mat-card class="box">
+    <mat-card-header>
       <mat-card-title>Ajout d'un assignment</mat-card-title>
     </mat-card-header>
-    <form #assignmentForm="ngForm" (submit)="onSubmit($event); assignmentForm.reset()" class="form">
-      <mat-card-content>
-        <mat-form-field class="example-full-width">
-          <input matInput placeholder="Nom" required [(ngModel)]="nomAssignment" name="nom" />
-        </mat-form-field>
+    <mat-card-content>
+      <mat-horizontal-stepper linear #stepper>
+        <!-- Step 1: Nom -->
+        <mat-step [stepControl]="firstFormGroup">
+          <form [formGroup]="firstFormGroup">
+            <ng-template matStepLabel>Nom de l'Assignment</ng-template>
+            <mat-form-field class="example-full-width">
+              <input matInput placeholder="Nom" formControlName="nomAssignment" required />
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
+          </form>
+        </mat-step>
 
-        <mat-form-field class="example-full-width">
-          <mat-label>Date de rendu</mat-label>
-          <input matInput [matDatepicker]="picker" [(ngModel)]="dateDeRendu" name="date" />
-          <mat-hint>dd/MM/YYYY</mat-hint>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+        <!-- Step 2: Date de rendu -->
+        <mat-step [stepControl]="secondFormGroup">
+          <form [formGroup]="secondFormGroup">
+            <ng-template matStepLabel>Date de Rendu</ng-template>
+            <mat-form-field class="example-full-width">
+              <mat-label>Date de rendu</mat-label>
+              <input matInput [matDatepicker]="picker" formControlName="dateDeRendu" required />
+              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+              <mat-datepicker #picker></mat-datepicker>
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperPrevious>Précédent</button>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
+          </form>
+        </mat-step>
 
-        <mat-form-field class="example-full-width">
-          <mat-label>Nom de l'auteur</mat-label>
-          <mat-select [(ngModel)]="auteurSelectionne" name="auteur" required>
-            <mat-option *ngFor="let auteur of auteurs" [value]="auteur._id">{{ auteur.nom }}</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <!-- Step 3: Auteur -->
+        <mat-step [stepControl]="thirdFormGroup">
+          <form [formGroup]="thirdFormGroup">
+            <ng-template matStepLabel>Auteur</ng-template>
+            <mat-form-field class="example-full-width">
+              <mat-label>Nom de l'auteur</mat-label>
+              <mat-select formControlName="auteurSelectionne" required>
+                <mat-option *ngFor="let auteur of auteurs" [value]="auteur._id">{{ auteur.nom }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperPrevious>Précédent</button>
+              <button mat-button matStepperNext>Suivant</button>
+            </div>
+          </form>
+        </mat-step>
 
-        <mat-form-field class="example-full-width">
-          <mat-label>Nom de la matière</mat-label>
-          <mat-select [(ngModel)]="matiereSelectionnee" name="matiere" required>
-            <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">{{ matiere.nom }}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </mat-card-content>
-      <br>
-      <mat-card-actions>
-        <button mat-flat-button color="primary" type="submit" class="button" [disabled]="!nomAssignment || !dateDeRendu || !auteurSelectionne || !matiereSelectionnee">
-          Ajouter un devoir
-        </button>
-      </mat-card-actions>
-    </form>
+        <!-- Step 4: Matière -->
+        <mat-step [stepControl]="fourthFormGroup">
+          <form [formGroup]="fourthFormGroup">
+            <ng-template matStepLabel>Matière</ng-template>
+            <mat-form-field class="example-full-width">
+              <mat-label>Nom de la matière</mat-label>
+              <mat-select formControlName="matiereSelectionnee" required>
+                <mat-option *ngFor="let matiere of matieres" [value]="matiere._id">{{ matiere.nom }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <div>
+              <button mat-button matStepperPrevious>Précédent</button>
+              <button mat-flat-button color="primary" (click)="onSubmit()">Ajouter un devoir</button>
+            </div>
+          </form>
+        </mat-step>
+      </mat-horizontal-stepper>
+    </mat-card-content>
   </mat-card>
 </div>
